<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    card_view:cardCornerRadius="4dp"
    card_view:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/card_header_color_3"
            android:paddingTop="8dp"
            android:paddingBottom="8dp">
            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/app_info_directories_layout_header"
                android:textColor="@color/textColorPrimary"
                android:textSize="16dp"/>
        </FrameLayout>

        <TextView
            android:id="@+id/tvDataDirHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="8dp"
            android:text="@string/app_info_directories_data_header"
            android:textColor="@color/textColorPrimary" />

        <TextView
            android:id="@+id/tvDataDir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="8dp"
            android:text="New Text" />

        <TextView
            android:id="@+id/tvSourceDirHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="8dp"
            android:text="@string/app_info_directories_source_header"
            android:textColor="@color/textColorPrimary" />

        <TextView
            android:id="@+id/tvSourceDir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="8dp"
            android:text="New Text" />

        <TextView
            android:id="@+id/tvNativeLibDirHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/app_info_directories_native_lib_header"
            android:textColor="@color/textColorPrimary" />

        <TextView
            android:id="@+id/tvNativeLibDir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="8dp"
            android:text="New Text" />

        <TextView
            android:id="@+id/tvPublicSourceDirHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/app_info_directories_public_source_header"
            android:textColor="@color/textColorPrimary" />

        <TextView
            android:id="@+id/tvPublicSourceDir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="8dp"
            android:text="New Text" />

        <TextView
            android:id="@+id/tvSplitPublicSourceDirsHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/app_info_directories_split_public_source_header"
            android:textColor="@color/textColorPrimary" />

        <TextView
            android:id="@+id/tvSplitPublicSourceDirs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="8dp"
            android:text="New Text" />

        <TextView
            android:id="@+id/tvSplitSourceDirsHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/app_info_directories_split_source_header"
            android:textColor="@color/textColorPrimary" />

        <TextView
            android:id="@+id/tvSplitSourceDirs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="8dp"
            android:text="New Text" />


    </LinearLayout>
</android.support.v7.widget.CardView>
