<?xml version="1.0" encoding="utf-8"?>
<com.balysv.materialripple.MaterialRippleLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:mrl_rippleColor="@color/colorPrimary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="8dp">




        <TextView
            android:id="@+id/tvNameHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="8dp"
            android:text="@string/declared_permission_name_header"
            android:textColor="@color/textColorPrimary" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="8dp"
            android:text="New Text" />

        <TextView
            android:id="@+id/tvLabelHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="8dp"
            android:text="@string/declared_permission_label_header"
            android:textColor="@color/textColorPrimary" />

        <TextView
            android:id="@+id/tvLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="8dp"
            android:text="New Text" />

        <TextView
            android:id="@+id/tvProtectionLevelHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="8dp"
            android:text="@string/declared_permission_protection_level_header"
            android:textColor="@color/textColorPrimary" />

        <TextView
            android:id="@+id/tvProtectionLevel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="8dp"
            android:text="New Text" />

        <TextView
            android:id="@+id/tvFlagsHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="8dp"
            android:text="@string/declared_permission_flags_header"
            android:textColor="@color/textColorPrimary" />

        <TextView
            android:id="@+id/tvFlags"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="8dp"
            android:text="New Text" />
    </LinearLayout>
</com.balysv.materialripple.MaterialRippleLayout>