<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    card_view:cardCornerRadius="4dp"
    card_view:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/card_header_color_4"
            android:paddingTop="8dp"
            android:paddingBottom="8dp">
            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/app_info_general_layout_header"
                android:textColor="@color/textColorPrimary"
                android:textSize="16dp"/>
        </FrameLayout>

        <TextView
            android:id="@+id/tvNameHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="8dp"
            android:text="@string/activity_info_general_name_header"
            android:textColor="@color/textColorPrimary" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="8dp"
            android:text="New Text" />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/tvEnabledHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/activity_info_general_enabled_header"
                android:textColor="@color/textColorPrimary" />

            <TextView
                android:id="@+id/tvExportedHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/activity_info_general_exported_header"
                android:textColor="@color/textColorPrimary" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvEnabled"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="8dp"
                    android:gravity="left"
                    android:text="New Text" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvExported"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="8dp"
                    android:gravity="right"
                    android:text="New Text" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/tvProcessNameHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="8dp"
            android:text="@string/activity_info_general_process_name_header"
            android:textColor="@color/textColorPrimary" />

        <TextView
            android:id="@+id/tvProcessName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="8dp"
            android:text="New Text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/tvIsLauncherHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/activity_info_general_is_launcher_header"
                android:textColor="@color/textColorPrimary" />

            <TextView
                android:id="@+id/tvIsMainHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/activity_info_general_is_main_header"
                android:textColor="@color/textColorPrimary" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvIsLauncher"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="8dp"
                    android:gravity="left"
                    android:text="New Text" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvIsMain"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="8dp"
                    android:gravity="right"
                    android:text="New Text" />
            </LinearLayout>

        </LinearLayout>


        <TextView
            android:id="@+id/tvTargetActivityHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="8dp"
            android:text="@string/activity_info_general_target_activity_header"
            android:textColor="@color/textColorPrimary" />

        <TextView
            android:id="@+id/tvTargetActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="8dp"
            android:text="New Text" />


        <TextView
            android:id="@+id/tvParentActivityHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="8dp"
            android:text="@string/activity_info_general_parent_activity_name_header"
            android:textColor="@color/textColorPrimary" />

        <TextView
            android:id="@+id/tvParentActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="8dp"
            android:text="New Text" />


        <TextView
            android:id="@+id/tvScreenOrientationHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="8dp"
            android:text="@string/activity_info_general_screen_orientation_header"
            android:textColor="@color/textColorPrimary" />

        <TextView
            android:id="@+id/tvScreenOrientation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="8dp"
            android:text="New Text" />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/tvMaxRecentsHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/activity_info_general_max_recents_header"
                android:textColor="@color/textColorPrimary" />

            <TextView
                android:id="@+id/tvTaskAffinityHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/activity_info_general_task_affinity_header"
                android:textColor="@color/textColorPrimary" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvMaxRecents"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="8dp"
                    android:gravity="left"
                    android:text="New Text" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvTaskAffinity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="8dp"
                    android:gravity="right"
                    android:text="New Text" />
            </LinearLayout>

        </LinearLayout>



        <TextView
            android:id="@+id/tvPersistableModeHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="8dp"
            android:text="@string/activity_info_general_persistable_mode_header"
            android:textColor="@color/textColorPrimary" />

        <TextView
            android:id="@+id/tvPersistableMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="8dp"
            android:text="New Text" />



        <TextView
            android:id="@+id/tvPermissionHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="8dp"
            android:text="@string/activity_info_general_permission_header"
            android:textColor="@color/textColorPrimary" />

        <TextView
            android:id="@+id/tvPermission"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="8dp"
            android:text="New Text" />



        <TextView
            android:id="@+id/tvDocumentLaunchModeHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="8dp"
            android:text="@string/activity_info_general_document_launch_mode_header"
            android:textColor="@color/textColorPrimary" />

        <TextView
            android:id="@+id/tvDocumentLaunchMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="8dp"
            android:text="New Text" />

    </LinearLayout>
</android.support.v7.widget.CardView>